Add a marker in the margin for FIXME
Signed-off-by: David MENTRE <d.mentre@fr.merce.mee.com>

--- a/ETCS-benchmark/ETCS-benchmark.tex
+++ b/ETCS-benchmark/ETCS-benchmark.tex
@@ -7,7 +7,7 @@
 \frontmatter
 \project{openETCS}
 
-\newcommand{\FIXME}[1]{\textbf{FIXME: #1}}
+\newcommand{\FIXME}[1]{\marginpar{FIXME}\textbf{FIXME: #1}}
 
 %Please do not change anything above this line
 %============================
@@ -164,8 +164,6 @@ in the benchmarking model in order to evaluate a tool:
   Rationale: That would be a perfect use case for tools able to model
   things down to bit level.
 \end{description}
-
-
 
 \end{document}
 Local Variables:
