Added test comment

--- a/Benchmarking/ETCS-benchmark.tex
+++ b/Benchmarking/ETCS-benchmark.tex
@@ -213,6 +213,8 @@ time permits.
 \FIXME{Should we model an API? E.g. Odometer? Which reference
   document?}
 
+\FIXME{This is a test comment to check if diffing works correctly on a pull request}
+
 \end{document}
 Local Variables:
 ispell-local-dictionary: "english"
