--- a/D2.3/Synthesis/req_synthesis.tex
+++ b/D2.3/Synthesis/req_synthesis.tex
@@ -525,6 +525,9 @@ integration tests.
 \todo{Verification that the refinements of system design to software code is coherent?}\\
 
 \todo{Verification that the proofs defined at system level design, are valids?}
+
+\req{Validation shall cover Subset-076.}
+
 \end{issue}
 
 \tbc
@@ -589,7 +592,6 @@ or if an open source counterpart is provided.}
 \subreq{It shall allow distributed software development.}
 \subreq{It shall include an \emph{issue-tracking system}, in order to allow change management and 
 errors/bugs management.}
-\subreq{It shall offer suitable code-generation interface and services.}
 \subreq{It shall allow to document/track the differences between the model and the ERTMS reference.}
 \subreq{It shall support management of subsequent Subset-026 versions, as well as differences tracking between Subset-026 versions.}
 \begin{justif}
@@ -606,7 +608,12 @@ participant on a configuration item, at each step of the project lifecycle.}
 \subreq{In particular, version management shall allow to track version of the safety properties 
 together with the model.}
 
+\req{The tool chain shall allow traceability between the documentation (in particular the specification) 
+and the models and safety properties.}
+
 \req{The tool chain shall be platform independent, i.e. be portable accross windows, linux, mac, etc.}
+
+\subreq{The toolchain shall offer suitable code-generation interfaces and services.}
 
 \req{The tool chain shall allow traceability between:}
 \subreq{the Subset-026 and the model, and vice-versa}
